Some refactoring.
svn path=/trunk/; revision=38